--- a/sevenoctober/theives/templates/theives/index.html
+++ b/sevenoctober/theives/templates/theives/index.html
@@ -6,5 +6,19 @@
 </head>
 <body>
     <h1 style="color: red;"> This is the landing page </h1>
+
+    {{theives}}
+    <table>
+            <tr> <th> ID</th> <th> Name </th> <th> Image </th></tr>
+
+    {% for theif in theives %}
+        <tr>
+            <td> {{theif.id}}</td>
+              <td> {{theif.name}}</td>
+              <td> {{theigf.image}}</td>
+        </tr>
+    {% endfor %}
+         </table>
 </body>
+
 </html>
