--- a/sevenoctober/theives/templates/theives/index.html
+++ b/sevenoctober/theives/templates/theives/index.html
@@ -1,24 +1,37 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Theives Index </title>
+    <link rel="stylesheet" href="{% static 'theives/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css'%}">
 </head>
 <body>
+    <div class="container">
     <h1 style="color: red;"> This is the landing page </h1>
-
+    you must restart the server after adding static folder to the application
     {{theives}}
-    <table>
-            <tr> <th> ID</th> <th> Name </th> <th> Image </th></tr>
+    <table class="table">
+            <tr> <th> ID</th> <th> Name </th> <th> Image </th>
+            <th> Show</th>
+            </tr>
 
     {% for theif in theives %}
         <tr>
             <td> {{theif.id}}</td>
               <td> {{theif.name}}</td>
-              <td> {{theigf.image}}</td>
+<!--              <td> <img src="{% static 'theives/images/pic2.png' %}" width="200" height="200"> </td>-->
+             <td> <img src="{% static 'theives/images/'|add:theif.image %}" width="200" height="200"> </td>
+<!--            <td>  <a href="/theives/profile/{{theif.id}}" class="btn btn-primary"> Show </a></td>-->
+            <td>  <a href="{% url 'theif.profile' theif.id %}" class="btn btn-primary"> Show </a></td>-->
         </tr>
     {% endfor %}
          </table>
+</div>
+    <script src="{% static 'bootstrap/js/bootstrap.js'%}">
+
+    </script>
 </body>
 
 </html>
