sending data via forms to server

--- a/sevenoctober/theives/templates/theives/layouts/base.html
+++ b/sevenoctober/theives/templates/theives/layouts/base.html
@@ -49,7 +49,7 @@
 </header>
 
 <div class="container">
-    <h1 style="color: green;">Hi Maged </h1>
+<!--    <h1 style="color: green;">Hi Maged </h1>-->
     <div class="bg-warning">
         {% block content %}
 
@@ -64,7 +64,7 @@
 
     {% block test %}
         <div class="bg-danger">
-            <h2> this is the test </h2>
+<!--            <h2> this is the test </h2>-->
         </div>
     {% endblock %}
 
