--- a/sevenoctober/students/templates/students/index.html
+++ b/sevenoctober/students/templates/students/index.html
@@ -5,6 +5,7 @@
 {% block title %}Students Index {% endblock %}
 {% block main %}
     <h1> Welcome to students index </h1>
+    <a href="{% url 'students.create' %}" class="btn btn-dark">Add new student </a>
     <table class="table">
             <tr> <th> ID</th>  <th> Name</th> <th>Image </th>
                 <th> Show </th> <th> Delete</th>
@@ -15,8 +16,10 @@
                 <td>{{student.id }}</td>
                  <td>{{student.name }}</td>
                  <td><img src="{% static  'students/images/'|add:student.image %}" width="100" height="100" > </td>
-                <td><a href="{% url 'students.show' student.id %}" class="btn btn-info">  Show </a> </td>
-                 <td><a href="{% url 'students.delete' student.id %}" class="btn btn-danger">  Delete </a> </td>
+<!--                <td><a href="{% url 'students.show' student.id %}" class="btn btn-info">  Show </a> </td>-->
+                <td><a href="{{student.get_show_url}}" class="btn btn-info">  Show </a> </td>
+
+                 <td><a href="{{student.get_delete_url}}" class="btn btn-danger">  Delete </a> </td>
             </tr>
         {% endfor %}
     </table>
