--- a/sevenoctober/tracks/templates/tracks/index.html
+++ b/sevenoctober/tracks/templates/tracks/index.html
@@ -1,11 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Tracks </title>
-</head>
-<body>
-    <h1 style="color:blue; font-style: italic; font-family: Courier"> Welcome to Tracks home page</h1>
+{% extends 'theives/layouts/base.html' %}
 
-</body>
-</html>
+{% load static %}
+
+{% block title %}Tracks Index {% endblock %}
+{% block main %}
+    <h1> Welcome to tracks index </h1>
+    <a href="{% url 'tracks.create'%}" class="btn btn-dark">Add new Track </a>
+    <table class="table">
+            <tr> <th> ID</th>  <th> Name</th> <th>Image </th>
+                <th> Show </th> <th> Delete</th>
+            </tr>
+
+        {% for track in tracks %}
+            <tr>
+                <td>{{track.id }}</td>
+                 <td>{{track.name }}</td>
+                 <td><img src="{{track.get_image_url}}" width="100" height="100" > </td>
+                <td><a href="" class="btn btn-info">  Show </a> </td>
+
+                 <td><a href="" class="btn btn-danger">  Delete </a> </td>
+            </tr>
+        {% endfor %}
+    </table>
+
+{% endblock %}
