form validation using forms

--- a/sevenoctober/theives/templates/theives/layouts/base.html
+++ b/sevenoctober/theives/templates/theives/layouts/base.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <title>{% block title %} {% endblock %}</title>
         <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css'%}">
-
+    <style>
+        .errorslist{
+            color: red;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
 <header>
