--- a/sevenoctober/students/templates/students/show.html
+++ b/sevenoctober/students/templates/students/show.html
@@ -11,6 +11,7 @@
       <div class="card-body">
         <h5 class="card-title">{{student.name}}</h5>
         <p class="card-text">Age: {{student.age}}</p>
+          <p class="card-text">Track: {{student.track}}</p>
           <p class="card-text">Created_at: {{student.created_at}}</p>
           <p class="card-text">Updated_at: {{student.updated_at}}</p>
         <a href="{% url 'students.index'%}" class="btn btn-primary">Back to all students</a>
