--- a/sevenoctober/students/templates/students/index.html
+++ b/sevenoctober/students/templates/students/index.html
@@ -8,7 +8,7 @@
     <a href="{% url 'students.create' %}" class="btn btn-dark">Add new student </a>
     <table class="table">
             <tr> <th> ID</th>  <th> Name</th> <th>Image </th>
-                <th> Show </th> <th> Delete</th>
+                <th> Show </th> <th>Edit</th> <th> Delete</th>
             </tr>
 
         {% for student in students %}
@@ -18,7 +18,7 @@
                  <td><img src="{% static  'students/images/'|add:student.image %}" width="100" height="100" > </td>
 <!--                <td><a href="{% url 'students.show' student.id %}" class="btn btn-info">  Show </a> </td>-->
                 <td><a href="{{student.get_show_url}}" class="btn btn-info">  Show </a> </td>
-
+                <td><a href="{{student.get_edit_url}}" class="btn btn-warning">  Edit </a> </td>
                  <td><a href="{{student.get_delete_url}}" class="btn btn-danger">  Delete </a> </td>
             </tr>
         {% endfor %}
